style changes, date format, links, post edits

--- a/src/content/posts/favTools23.mdx
+++ b/src/content/posts/favTools23.mdx
@@ -51,7 +51,7 @@ mode on the same screen.
 
 Yup
 
-## [Lucide Icons](https://lucide.dev/)
+### [Lucide Icons](https://lucide.dev/)
 
 It’s like any other well-designed icon set except the accessibility
 icon has a wheelchair person in action, so much cooler.
