--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -87,14 +87,4 @@ really proud of the work that we did on this project. 🎣
 <br />
 
 ### Team Members
-[Yasmina Amir](https://www.linkedin.com/in/yasmina-amirifar/)
-
-[Sue Lee](https://www.linkedin.com/in/slee1204/)
-
-[Ivan Li](https://www.linkedin.com/in/ivan-ligahei/)
-
-[Lucia Martin](https://www.linkedin.com/in/luciaemm/)
-
-[Sejin Oh](https://www.linkedin.com/in/sj-oh/)
-
-[Ivan Tong](https://www.linkedin.com/in/itong539/)
+[Yasmina Amir](https://www.linkedin.com/in/yasmina-amirifar/), [Sue Lee](https://www.linkedin.com/in/slee1204/), [Ivan Li](https://www.linkedin.com/in/ivan-ligahei/), [Lucia Martin](https://www.linkedin.com/in/luciaemm/), [Sejin Oh](https://www.linkedin.com/in/sj-oh/), [Ivan Tong](https://www.linkedin.com/in/itong539/)
