--- a/src/content/posts/color.mdx
+++ b/src/content/posts/color.mdx
@@ -8,7 +8,7 @@ image:
   alt: "A grainy gradient made of purple, pink, orange, and red."
 ---
 
-import Note from '../../components/Note.astro';
+import Note from "../../components/Note.astro";
 
 <Note emoji="📟" type="technology">
   **Technologies used:** CodeSandbox, React
