--- a/src/content/posts/macApps.mdx
+++ b/src/content/posts/macApps.mdx
@@ -1,10 +1,10 @@
 ---
-title: '3 Useful Mac Apps'
+title: "3 Useful Mac Apps"
 date: 2023-03-15
-description: 'These 3 applications are useful little utilities for Mac users.'
+description: "These 3 applications are useful little utilities for Mac users."
 image:
-  src: '/posts/apps.jpg'
-  alt: 'The app icons for New File Menu, Tot, and Rectangle'
+  src: "/posts/apps.jpg"
+  alt: "The app icons for New File Menu, Tot, and Rectangle"
 ---
 
 ## New File Menu – Paid ($1.99)
