--- a/src/content/posts/text2array.mdx
+++ b/src/content/posts/text2array.mdx
@@ -1,15 +1,14 @@
 ---
-title: 'Text 2 Array Tool'
+title: "Text 2 Array Tool"
 date: 2022-12-30
 description: "I'm tired of typing out arrays."
 image:
-  src: '/posts/t2a.jpg'
-  alt:
-    'The acronym t2a being spread into an array that contains the
-    elements t, 2, and a.'
+  src: "/posts/t2a.jpg"
+  alt: "The acronym t2a being spread into an array that contains the
+    elements t, 2, and a."
 ---
 
-import Note from '../../components/Note.astro';
+import Note from "../../components/Note.astro";
 
 <Note emoji="📟" type="technology">
   **Technologies used:** Vite, React
