--- a/src/content/posts/1to20&tsguess.mdx
+++ b/src/content/posts/1to20&tsguess.mdx
@@ -1,17 +1,17 @@
 ---
-title: '1 to 20 and Taylor Swift'
+title: "1 to 20 and Taylor Swift"
 date: 2023-03-09
-description: 'Tap 1 to 20 and a guessing game for Taylor Swift fans.'
+description: "Tap 1 to 20 and a guessing game for Taylor Swift fans."
 ---
 
-import Note from '../../components/Note.astro';
+import Note from "../../components/Note.astro";
 
 <Note emoji="📟" type="technology">
   **Technologies used:** Next.js, React, Vite, Prisma, Railway
 </Note>
 
-<br /> 
-<br /> 
+<br />
+<br />{" "}
 
 ### [Tap 1 to 20 as fast as you can](https://1to20.vercel.app/)
 
