--- a/src/content/posts/favTools23.mdx
+++ b/src/content/posts/favTools23.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Web Development Tools I Use For Pretty Much Everything'
+title: "Web Development Tools I Use For Pretty Much Everything"
 date: 2023-02-18
-description: 'Here are some of the online tools I use the most.'
+description: "Here are some of the online tools I use the most."
 draft: false
 ---
 
@@ -11,8 +11,6 @@ draft: false
 {/* 4. [https://webaim.org/resources/contrastchecker/](https://webaim.org/resources/contrastchecker/) */}
 {/* 5. [https://smolcss.dev/](https://smolcss.dev/) */}
 {/* 6. [https://lucide.dev/](https://lucide.dev/) */}
-
-<br />
 
 ### [Beta React Docs](https://beta.reactjs.org/)
 
