install prettier tailwind plugin

--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -15,12 +15,13 @@ import Note from "../../components/Note.astro";
 <Note emoji="📟" type="technology">
   **Technologies used:** Next.js, Firebase, Nodemailer, NextAuth, Mantine,
   Handlebars.js, Chart.js
-</Note>  
+</Note>
 
 <br />
 
 <Note emoji="⚠️" type="warning">
-  **Warning:** Phished is a proof-of-concept project and as of March 1 2023, signups have been disabled.
+  **Warning:** Phished is a proof-of-concept project and as of March 1 2023,
+  signups have been disabled.
 </Note>
 
 <br />
