add @tailwindcss/typography, change styling for posts

--- a/src/content/posts/favTools23.mdx
+++ b/src/content/posts/favTools23.mdx
@@ -19,13 +19,9 @@ beta docs is that they’ve rewritten everything to use hooks instead of
 classes. I don’t think I have ever used classes in React – not sure if
 that’s good or not…
 
-<br />
-
 ### [Operator Lookup](https://www.joshwcomeau.com/operator-lookup/)
 
 Just bookmark this!
-
-<br />
 
 ### [Can I Use…](https://caniuse.com/)
 
@@ -34,26 +30,16 @@ website works on different browsers. Can I Use is great because if a
 feature isn’t like 98% supported yet I can just forget about it for
 the next couple years.
 
-<br />
-
 ### [WebAIM: Contrast Checker](https://webaim.org/resources/contrastchecker/)
 
 Does what it says and you can check your dark mode _and_ your light
 mode on the same screen.
 
-<br />
-
 ### [SmolCSS](https://smolcss.dev/)
 
-> “Minimal snippets for modern CSS layouts and components” - SmolCSS
-
-Yup
-
-<br />
+Snippets for CSS layouts and components.
 
 ### [Lucide Icons](https://lucide.dev/)
 
 It’s like any other well-designed icon set except the accessibility
 icon has a wheelchair person in action, so much cooler.
-
-<br />
