--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -20,7 +20,7 @@ import Note from "../../components/Note.astro";
 <br />
 
 <Note emoji="⚠️" type="warning">
-  **Warning:** Phished is a proof-of-concept project and as of March 1 2023,
+  **Warning:** Phished is a proof-of-concept project and as of March 1 2023, 
   signups have been disabled.
 </Note>
 
@@ -30,16 +30,12 @@ I led a team of seven developers and designers to build Phished, a fun
 and interactive way to educate users about phishing.
 [Click to check it out!](https://phished.up.railway.app/)
 
-<br />
-
 ## Why build Phished?
 
 Our goal for this project was to encourage users to take an active
 role in the fight against phishing emails. We found that elderly
 individuals are disproportionally targeted and impacted by online
 scams, many of which originate from fraudulent emails.
-
-<br />
 
 We also realized that those same elderly users were unlikely to be the
 ones using Phished, so our focus was on giving Internet-savvy a tool
@@ -54,8 +50,6 @@ a target. If the target clicks on the link in the email, we record the
 event and display the results in a dashboard. Over a period of time,
 users can see which of their targets clicked on the link and how many
 of them fell for a scam.
-
-<br />
 
 When targets fall for a phishing email sent by us, we redirect them to
 our page where they can learn about the scam and how to avoid it in
@@ -73,8 +67,6 @@ implementing our design system, building the dashboard, and
 integrating the front-end application with data from our back-end. I worked closely with our designers to
 ensure that our design system was consistent and easy to use. We used
 Mantine, a React UI library, to build out our front-end.
-
-<br />
 
 I also worked closely with our back-end developers to build out the
 site's infrastructure. We used Firebase's Firestore database to store
@@ -98,6 +90,6 @@ really proud of the work that we did on this project. 🎣
 
 <br />
 
-### Team Members
+## Team Members
 
 [Yasmina Amir](https://www.linkedin.com/in/yasmina-amirifar/), [Sue Lee](https://www.linkedin.com/in/slee1204/), [Ivan Li](https://www.linkedin.com/in/ivan-ligahei/), [Lucia Martin](https://www.linkedin.com/in/luciaemm/), [Sejin Oh](https://www.linkedin.com/in/sj-oh/), [Ivan Tong](https://www.linkedin.com/in/itong539/)
