Revert "new new"

--- a/src/content/posts/design.mdx
+++ b/src/content/posts/design.mdx
@@ -1,14 +1,17 @@
 ---
 # layout: "../../layouts/MarkdownPostLayout.astro"
-title: "Creative Work"
+title: 'Creative Work'
 date: 2022-11-23
 description: "and other stuff."
 draft: false
 image:
-  src: "/posts/creative-work.png"
-  alt: 'The words "Creative Work", with a scribbled arrow aimed at the
+  src: '/posts/creative-work.png'
+  alt:
+    'The words "Creative Work", with a scribbled arrow aimed at the
     words "& Other Stuff".'
 ---
+
+import VerticalVideo from '../../components/VerticalVideo.astro';
 
 ![A young Steph Curry rises up to take the shot. On his right, present-day Steph Curry looks on as he dribbles a basketball.](/posts/curry.png)
 
