--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -1,27 +1,21 @@
 ---
-title: "Fight Phishers by Phishing"
+title: 'Fight Phishers by Phishing'
 date: 2022-11-21
-description: "Send and track customizable phishing emails to educate your loved ones with Phished."
+description: 'Send and track customizable phishing emails to educate your loved ones with Phished.'
 image:
-  src: "/posts/phished-screenshot.jpg"
-  alt: "A tablet and smartphone are next to each other, each displaying a
+  src: '/posts/phished-screenshot.jpg'
+  alt:
+    'A tablet and smartphone are next to each other, each displaying a
     screenshot from the Phished website. The Phished logo, a fish with
     an envelope for a body, is displayed on the right with the Phished
-    wordmark."
+    wordmark.'
 ---
 
-import Note from "../../components/Note.astro";
+import Note from '../../components/Note.astro';
 
 <Note emoji="📟" type="technology">
-  **Technologies used:** Next.js, Firebase, Nodemailer, NextAuth, Mantine,
-  Handlebars.js, Chart.js
-</Note>
-
-<br />
-
-<Note emoji="⚠️" type="warning">
-  **Warning:** Phished is a proof-of-concept project and as of March 1 2023, 
-  signups have been disabled.
+  **Technologies used:** Next.js, Firebase, Nodemailer, NextAuth,
+  Mantine, Handlebars.js, Chart.js
 </Note>
 
 <br />
@@ -29,6 +23,8 @@ import Note from "../../components/Note.astro";
 I led a team of seven developers and designers to build Phished, a fun
 and interactive way to educate users about phishing.
 [Click to check it out!](https://phished.up.railway.app/)
+
+<br />
 
 ## Why build Phished?
 
@@ -90,6 +86,5 @@ really proud of the work that we did on this project. 🎣
 
 <br />
 
-## Team Members
-
+### Team Members
 [Yasmina Amir](https://www.linkedin.com/in/yasmina-amirifar/), [Sue Lee](https://www.linkedin.com/in/slee1204/), [Ivan Li](https://www.linkedin.com/in/ivan-ligahei/), [Lucia Martin](https://www.linkedin.com/in/luciaemm/), [Sejin Oh](https://www.linkedin.com/in/sj-oh/), [Ivan Tong](https://www.linkedin.com/in/itong539/)
