--- a/src/content/posts/color.mdx
+++ b/src/content/posts/color.mdx
@@ -8,11 +8,13 @@ image:
   alt: "A grainy gradient made of purple, pink, orange, and red."
 ---
 
-import Note from "../../components/Note.astro";
+import Note from '../../components/Note.astro';
 
 <Note emoji="📟" type="technology">
   **Technologies used:** CodeSandbox, React
 </Note>
+
+<br />
 
 In this game users are prompted to guess the color when given an HTML color name. The most challenging part of this project was developing the scoring system – I decided to base it around the difference between the user's color and the actual value of the HTML color name using their RGB values.
 
@@ -23,7 +25,6 @@ _Mathematically_ the scoring system works, but to the human eye it's _perceptual
 Anyways, check it out on [codesandbox](https://codesandbox.io/s/colormatch-bi3jrb).
 
 <br />
-
 <iframe
   src="https://codesandbox.io/embed/colormatch-bi3jrb?fontsize=14&hidenavigation=1&theme=dark&view=preview"
   style="width:100%; height:500px; border:0; border-radius: 4px; overflow:hidden;"
