--- a/src/content/posts/favTools23.mdx
+++ b/src/content/posts/favTools23.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Web Development Tools I Use For Pretty Much Everything"
+title: 'Web Development Tools I Use For Pretty Much Everything'
 date: 2023-02-18
-description: "Here are some of the online tools I use the most."
+description: 'Here are some of the online tools I use the most.'
 draft: false
 ---
 
@@ -12,6 +12,8 @@ draft: false
 {/* 5. [https://smolcss.dev/](https://smolcss.dev/) */}
 {/* 6. [https://lucide.dev/](https://lucide.dev/) */}
 
+<br />
+
 ### [Beta React Docs](https://beta.reactjs.org/)
 
 I started learning React with the beta docs. The biggest change in the
@@ -19,9 +21,13 @@ beta docs is that they’ve rewritten everything to use hooks instead of
 classes. I don’t think I have ever used classes in React – not sure if
 that’s good or not…
 
+<br />
+
 ### [Operator Lookup](https://www.joshwcomeau.com/operator-lookup/)
 
 Just bookmark this!
+
+<br />
 
 ### [Can I Use…](https://caniuse.com/)
 
@@ -30,16 +36,24 @@ website works on different browsers. Can I Use is great because if a
 feature isn’t like 98% supported yet I can just forget about it for
 the next couple years.
 
+<br />
+
 ### [WebAIM: Contrast Checker](https://webaim.org/resources/contrastchecker/)
 
 Does what it says and you can check your dark mode _and_ your light
 mode on the same screen.
 
+<br />
+
 ### [SmolCSS](https://smolcss.dev/)
 
-Snippets for CSS layouts and components.
+> “Minimal snippets for modern CSS layouts and components” - SmolCSS
+
+Yup
 
 ### [Lucide Icons](https://lucide.dev/)
 
 It’s like any other well-designed icon set except the accessibility
 icon has a wheelchair person in action, so much cooler.
+
+<br />
