--- a/src/content/posts/text2array.mdx
+++ b/src/content/posts/text2array.mdx
@@ -1,18 +1,21 @@
 ---
-title: "Text 2 Array Tool"
+title: 'Text 2 Array Tool'
 date: 2022-12-30
 description: "I'm tired of typing out arrays."
 image:
-  src: "/posts/t2a.jpg"
-  alt: "The acronym t2a being spread into an array that contains the
-    elements t, 2, and a."
+  src: '/posts/t2a.jpg'
+  alt:
+    'The acronym t2a being spread into an array that contains the
+    elements t, 2, and a.'
 ---
 
-import Note from "../../components/Note.astro";
+import Note from '../../components/Note.astro';
 
 <Note emoji="📟" type="technology">
   **Technologies used:** Vite, React
 </Note>
+
+<br />
 
 [I made a tool to type arrays quickly.](https://text2array.vercel.app/)
 
@@ -28,6 +31,8 @@ common lists, like the English alphabet and the months of the year.
 ## Spaghetti, spaghetti everywhere
 
 Hopefully this is the worst code I'll ever write.
+
+<br />
 
 ```jsx
 <textarea
