remove warning from phished post

--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -19,10 +19,10 @@ import Note from "../../components/Note.astro";
 
 <br />
 
-<Note emoji="⚠️" type="warning">
+{/* <Note emoji="⚠️" type="warning">
   **Warning:** Phished is a proof-of-concept project and as of March 1 2023, 
   signups have been disabled.
-</Note>
+</Note> */}
 
 <br />
 
