--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -19,13 +19,6 @@ import Note from "../../components/Note.astro";
 
 <br />
 
-{/* <Note emoji="⚠️" type="warning">
-  **Warning:** Phished is a proof-of-concept project and as of March 1 2023, 
-  signups have been disabled.
-</Note> */}
-
-<br />
-
 I led a team of seven developers and designers to build Phished, a fun
 and interactive way to educate users about phishing.
 [Click to check it out!](https://phished.up.railway.app/)
@@ -41,8 +34,6 @@ We also realized that those same elderly users were unlikely to be the
 ones using Phished, so our focus was on giving Internet-savvy a tool
 to educate their loved ones in an interactive and positive manner.
 
-<br />
-
 ## How does it work?
 
 Users create campaigns, where personalized phishing emails are sent to
@@ -57,8 +48,6 @@ the future. Our goal is for users to evaluate the results from their
 campaigns and see improvement from their targets over time. We hope
 that users will share their results with their loved ones to encourage
 them to be more vigilant.
-
-<br />
 
 ## What did I do?
 
@@ -77,8 +66,6 @@ hash, so when targets click the link, we can track which user sent the
 email. Finally, we displayed the results on the user dashboard using
 Chart.js.
 
-<br />
-
 ## What did I learn?
 
 I learned a lot about building a full-stack application from scratch.
@@ -88,8 +75,8 @@ note quickly. I also learned a lot about the importance of
 collaboration and how to work with others in a team setting. I'm
 really proud of the work that we did on this project. 🎣
 
-<br />
-
-## Team Members
+### Team Members
 
 [Yasmina Amir](https://www.linkedin.com/in/yasmina-amirifar/), [Sue Lee](https://www.linkedin.com/in/slee1204/), [Ivan Li](https://www.linkedin.com/in/ivan-ligahei/), [Lucia Martin](https://www.linkedin.com/in/luciaemm/), [Sejin Oh](https://www.linkedin.com/in/sj-oh/), [Ivan Tong](https://www.linkedin.com/in/itong539/)
+
+<br />
