Edit MorePost appearence

--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Fight Phishers by Phishing"
 date: 2022-11-21
-description: "Send and track customizable phishing emails to educate your loved ones with Phished."
+description: "Send, monitor, and track your own phishing emails. Educational purposes only."
 image:
   src: "/posts/phished-screenshot.jpg"
   alt: "A tablet and smartphone are next to each other, each displaying a
