add aliases, optimize article cover images

--- a/src/content/posts/color.mdx
+++ b/src/content/posts/color.mdx
@@ -3,9 +3,8 @@ title: "HTML Color Name Game"
 date: 2022-11-21
 description: "Guess the shades of random HTML color codes."
 draft: false
-image:
-  src: "/posts/noisy-gradient.webp"
-  alt: "A grainy gradient made of purple, pink, orange, and red."
+imageSrc: "../../assets/posts/noisy-gradient.webp"
+imageAlt: "A grainy gradient made of purple, pink, orange, and red."
 ---
 
 import Note from "../../components/Note.astro";
