--- a/src/content/posts/phished.mdx
+++ b/src/content/posts/phished.mdx
@@ -2,9 +2,8 @@
 title: "Fight Phishers by Phishing"
 date: 2022-11-21
 description: "Send, monitor, and track your own phishing emails. Educational purposes only."
-image:
-  src: "/posts/phished-screenshot.jpg"
-  alt: "A tablet and smartphone are next to each other, each displaying a
+imageSrc: "../../assets/posts/phished.jpg"
+imageAlt: "A tablet and smartphone are next to each other, each displaying a
     screenshot from the Phished website. The Phished logo, a fish with
     an envelope for a body, is displayed on the right with the Phished
     wordmark."
