--- a/src/content/posts/design.mdx
+++ b/src/content/posts/design.mdx
@@ -4,10 +4,8 @@ title: "Creative Work"
 date: 2022-11-23
 description: "and other stuff."
 draft: false
-image:
-  src: "/posts/creative-work.png"
-  alt: 'The words "Creative Work", with a scribbled arrow aimed at the
-    words "& Other Stuff".'
+imageSrc: "../../assets/posts/creative-work.png"
+imageAlt: "The words 'Creative Work', with a scribbled arrow aimed at the words '& Other Stuff'"
 ---
 
 ![A young Steph Curry rises up to take the shot. On his right, present-day Steph Curry looks on as he dribbles a basketball.](/posts/curry.png)
