--- a/src/content/posts/text2array.mdx
+++ b/src/content/posts/text2array.mdx
@@ -2,10 +2,8 @@
 title: "Text 2 Array Tool"
 date: 2022-12-30
 description: "I'm tired of typing out arrays."
-image:
-  src: "/posts/t2a.jpg"
-  alt: "The acronym t2a being spread into an array that contains the
-    elements t, 2, and a."
+imageSrc: "../../assets/posts/t2a.jpg"
+imageAlt: "The acronym 't2a' being spread into an array that contains the elements t, 2, and a."
 ---
 
 import Note from "../../components/Note.astro";
