update mdx, optimize images in posts

--- a/src/content/posts/design.mdx
+++ b/src/content/posts/design.mdx
@@ -8,8 +8,8 @@ imageSrc: "../../assets/posts/creative-work.png"
 imageAlt: "The words 'Creative Work', with a scribbled arrow aimed at the words '& Other Stuff'"
 ---
 
-![A young Steph Curry rises up to take the shot. On his right, present-day Steph Curry looks on as he dribbles a basketball.](/posts/curry.png)
+![A young Steph Curry rises up to take the shot. On his right, present-day Steph Curry looks on as he dribbles a basketball.](../../assets/posts/curry.png)
 
-![A serif version of a poster for "The Proms", a BBC show.](/posts/proms1.png)
+![A serif version of a poster for "The Proms", a BBC show.](../../assets/posts/proms1.png)
 
-![A sans-serif version of a poster for "The Proms", a BBC show.](/posts/proms2.png)
+![A sans-serif version of a poster for "The Proms", a BBC show.](../../assets/posts/proms2.png)
