swap hello-world for minecraft sound, clean up post urls

--- a/src/content/posts/hot-toast.mdx
+++ b/src/content/posts/hot-toast.mdx
@@ -10,7 +10,7 @@ import ToastExample from "../../components/ToastExample.tsx";
 Thank you to @happydev on the Astro discord who was able to figure
 this out.
 
-### 1. Install react-hot-toast
+### 1. Install [react-hot-toast](https://react-hot-toast.com/docs)
 
 ```
 npm install react-hot-toast
