--- a/src/content/posts/hot-toast.mdx
+++ b/src/content/posts/hot-toast.mdx
@@ -5,7 +5,7 @@ description: "How to use react-hot-toast for notifcations in Astro."
 draft: false
 ---
 
-import ToastExample from "../../components/ToastExample.tsx";
+import ToastExample from "@components/ToastExample.tsx";
 
 Thank you to @happydev on the Astro discord who was able to figure
 this out.
