add more sounds

--- a/src/content/posts/drawing-garden.mdx
+++ b/src/content/posts/drawing-garden.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Drawing Garden"
-date: 2024-01-12
+date: 2024-01-13
 draft: false
 ---
 
 import DrawingGarden from "@components/DrawingGarden.tsx";
 
-Saw this on hackernews and wanted to recreate.
+[Saw this on hackernews](https://news.ycombinator.com/item?id=38945125) and wanted to recreate.
 
 <DrawingGarden client:load />
