--- a/src/content/posts/drawing-garden.mdx
+++ b/src/content/posts/drawing-garden.mdx
@@ -6,6 +6,6 @@ draft: false
 
 import DrawingGarden from "@components/DrawingGarden.tsx";
 
-[Saw this on hackernews](https://news.ycombinator.com/item?id=38945125) and wanted to recreate.
+[Saw this on hackernews](https://news.ycombinator.com/item?id=38945125) and wanted to recreate. Better on desktop.
 
 <DrawingGarden client:load />
