add icons, refactor Note component, minor styling

--- a/src/content/posts/daily-note.mdx
+++ b/src/content/posts/daily-note.mdx
@@ -35,9 +35,8 @@ Here’s my workflow for doing these daily notes using Shortcuts and a text edit
 
 5. For the input option select “Current Date”. This input will determine what the title of your .txt file is. By default, the current date will show up as <code>February 29, 2024 at 9:00 AM</code>. I want this to show up as <code>240229</code>; to do this, select the Current Date input and change the “Date Format” to “Custom”. Then you can replace the “Custom Format” textbox with <code>yyMMdd</code>.
 
-<Note type="secondary" emoji="⚠️">
-  If you want the full year in the title you can write <code>yyyyMMdd</code>.
-</Note>
+{/* prettier-ignore */}
+<Note type="question">If you want the full year in the title you can write <code>yyyyMMdd</code>.</Note>
 
 <br />
 
