--- a/src/content/posts/view-transition.mdx
+++ b/src/content/posts/view-transition.mdx
@@ -7,9 +7,8 @@ draft: false
 
 import Note from "../../components/Note.astro";
 
-<Note type="warning" emoji="⚠️">
-  Currently, the View Transition API only works in Chrome Canary.
-</Note>
+{/* prettier-ignore */}
+<Note type="warning">Currently, the View Transition API only works in Chrome Canary.</Note>
 
 ### 1. Enable the following feature flags in Chrome Canary
 
