--- a/src/content/posts/color-game.mdx
+++ b/src/content/posts/color-game.mdx
@@ -9,8 +9,9 @@ imageAlt: "A grainy gradient made of purple, pink, orange, and red."
 
 import Note from "../../components/Note.astro";
 
-<Note emoji="📟" type="technology">
-  **Technologies used:** CodeSandbox, React
+{/* prettier-ignore */}
+<Note type="device-alternate">
+  Technologies used: CodeSandbox, React
 </Note>
 
 In this game users are prompted to guess the color when given an HTML color name. The most challenging part of this project was developing the scoring system – I decided to base it around the difference between the user's color and the actual value of the HTML color name using their RGB values.
