breadcrumbs hide last item on small screens. change post schema to limit title length.

--- a/src/content/posts/daily-note.mdx
+++ b/src/content/posts/daily-note.mdx
@@ -1,15 +1,13 @@
 ---
-title: "Replicating Obsidian's Daily Notes Feature"
+title: "Shortcut for taking daily notes"
 date: 2024-02-29
-description: "Use Shortcuts and a text editor to replicate Obsidian's Daily Notes feature"
+description: "Guide on setting up a Shortcut to take daily notes on macOS."
 draft: false
 ---
 
 import Note from "../../components/Note.astro";
 
-I don't use Obsidian but I loved their Daily notes feature.
-
-> Daily notes opens a note based on today's date, or creates it if it doesn't exist. Use daily notes to create journals, to-do lists, or daily logs for things you discovered during the day.
+I like to create a .txt file for each day to take notes. It's akin to a fresh sheet of paper. The name of each daily note is <code>yyMMdd.txt</code> for easy sorting.
 
 Here’s my workflow for doing these daily notes using Shortcuts and a text editor.
 
