--- a/src/content/posts/view-transition.mdx
+++ b/src/content/posts/view-transition.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Animating page transitions with 3 lines of code"
+title: "Animating between web pages"
 date: 2023-05-24
 description: "Use the new View Transition API to animate between pages."
 draft: false
