--- a/src/content/posts/view-transition.mdx
+++ b/src/content/posts/view-transition.mdx
@@ -8,7 +8,7 @@ draft: false
 import Note from "../../components/Note.astro";
 
 {/* prettier-ignore */}
-<Note type="warning">Currently, the View Transition API only works in Chrome Canary.</Note>
+<Note type="warning">At the time of writing the View Transition API only works in Chrome Canary.</Note>
 
 ### 1. Enable the following feature flags in Chrome Canary
 
