minor post edits

--- a/src/content/posts/sports-rebrands.mdx
+++ b/src/content/posts/sports-rebrands.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Questionable rebrands in sports"
+title: "Cool image slider"
 date: 2024-06-16
-description: "Some of the worst sports rebrands in history."
+description: "Check out this image comparison component showcasing some questionable sports rebrands."
 draft: false
 ---
 
