update profile picture, increase h1 font size, rename image slider post

--- a/src/content/posts/image-slider.mdx
+++ b/src/content/posts/image-slider.mdx
@@ -9,44 +9,44 @@ import ImageComparison from "../../components/ImageComparison.astro";
 
 Drag the slider to see the difference between the logos.
 
-### Phoneix Coyotes
+## Phoneix Coyotes
 
 <ImageComparison team="coyotes" />
 
-### Anaheim Ducks
+## Anaheim Ducks
 
 <ImageComparison team="ducks" />
 
-### Florida Panthers
+## Florida Panthers
 
 <ImageComparison team="panthers" />
 
 ---
 
-### Toronto Raptors
+## Toronto Raptors
 
 <ImageComparison team="raptors" />
 
-### Utah Jazz
+## Utah Jazz
 
 <ImageComparison team="jazz" />
 
-### Memphis Grizzlies
+## Memphis Grizzlies
 
 <ImageComparison team="grizzlies" />
 
 ---
 
-### LA Rams
+## LA Rams
 
 <ImageComparison team="rams" />
 
 ---
 
-### Minnesotra Twins
+## Minnesotra Twins
 
 <ImageComparison team="twins" />
 
-### Pittsburgh Pirates
+## Pittsburgh Pirates
 
 <ImageComparison team="pirates" />
