fix limit issue with formatBlogPost, cleanup assets

--- a/src/content/posts/color-game.mdx
+++ b/src/content/posts/color-game.mdx
@@ -3,16 +3,14 @@ title: "HTML Color Name Game"
 date: 2022-11-21
 description: "Guess the shades of random HTML color codes."
 draft: false
-imageSrc: "../../assets/posts/noisy-gradient.webp"
+imageSrc: "../../assets/posts/noisy-gradient.jpg"
 imageAlt: "A grainy gradient made of purple, pink, orange, and red."
 ---
 
 import Note from "../../components/Note.astro";
 
 {/* prettier-ignore */}
-<Note type="device-alternate">
-  Technologies used: CodeSandbox, React
-</Note>
+<Note type="device-alternate">Technologies used: CodeSandbox, React</Note>
 
 In this game users are prompted to guess the color when given an HTML color name. The most challenging part of this project was developing the scoring system – I decided to base it around the difference between the user's color and the actual value of the HTML color name using their RGB values.
 
